<resources>
    <!--Main Strings-->
    <string name="app_name" translatable="false">Wakefield</string>

    <!--Navigation Drawer Strings description for accessibility-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Twitter List Strings-->
    <string name="list_owner_username" translatable="false">silentwork1</string>
    <string name="list_name_main" translatable="false">wakefield-main</string>
    <string name="list_name_sports" translatable="false">wakefield-sports</string>
    <string name="list_name_clubs" translatable="false">wakefield-clubs</string>
    <string name="list_name_teachers" translatable="false">wakefield-teachers</string>
    <string name="list_name_staff" translatable="false">wakefield-staff</string>

    <!--Navigation Drawer Strings-->
    <string name="school_name">Wakefield High School</string>
    <string name="school_website" translatable="false">https://wakefield.apsva.us/</string>
    <string name="action_main_activity">Home</string>
    <string name="action_my_news">My News</string>
    <string name="action_share_application">Share Application</string>
    <string name="action_synergy_login_website" translatable="false">Synergy</string>
    <string name="student_vue_login_website" translatable="false">
        https://vue.apsva.us/Login_Student_PXP.aspx?regenerateSessionId=Maybe</string>
    <string name="parent_vue_login_website" translatable="false">
        https://vue.apsva.us/Login_Parent_PXP.aspx?regenerateSessionId=Maybe</string>

    <!--Navigation Category About Strings-->
    <string name="nav_category_about">About</string>
    <string name="nav_help_and_feedback">Help &amp; Feedback</string>
    <string name="nav_settings">Settings</string>

    <!--Share Application Strings-->
    <string name="app_share_introduction">Check Out The</string>
    <string name="app_share_subject">News Application:</string>
    <string name="app_download_website" translatable="false">
        https://play.google.com/store/apps/details?id=
    </string>

    <!--3dots dropdown Menu Strings-->
    <string name="action_refresh">Refresh</string>
    <string name="action_information">Information</string>
    <string name="action_usernames">Usernames</string>
    <string name="school_website_usernames" translatable="false">
        https://docs.google.com/document/d/1T4Rmk1xG068ttpinv7dhU7Mn07Ofig_GcB_Pck_LmgY/edit?usp=sharing
    </string>

    <!--Toast Strings telling the user if they are connected to the internet-->
    <string name="connected_wifi">Connected on Wifi.</string>
    <string name="connected_mobile">Connected on Mobile.</string>
    <string name="connected_not">No Internet Service.</string>

    <!--Toast Information String fragments when you click on the drop down menu-->
    <!--These two strings are currently not in use.-->
    <string name="information_toast_beginning">Customize</string>
    <string name="information_toast_ending">tab in settings.</string>

    <!-- The message displayed when refresh fails-->
    <string name="swipe_refresh_failure">Cannot update posts at this time.</string>
    <string name="no_tweets">No Tweets to Show</string>
    <string name="loading_failure">Cannot load posts at this time.</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Personal settings -->
    <string name="pref_header_my_news">My News</string>
    <string name="pref_header_personalize">Personalize</string>
    <!-- These are used in personal settings and are for the personalFeedPActivity -->
    <string name="pref_title_username_1">Twitter Username 1</string>
    <string name="pref_username_default1" translatable="false">WHS_ItsL17</string>
    <string name="pref_title_username_2">Twitter Username 2</string>
    <string name="pref_username_default2" translatable="false">principalWHS</string>
    <string name="pref_title_username_3">Twitter Username 3</string>
    <string name="pref_username_default3" translatable="false">GirlUpWHS</string>
    <string name="pref_title_username_4">Twitter Username 4</string>
    <string name="pref_username_default4" translatable="false">WarriorGridIron</string>
    <string name="pref_description_username">Type the username of the timeline you wish to
        follow</string>
    <string name="pref_username_key_1" translatable="false">UsernameKey1</string>
    <string name="pref_username_key_2" translatable="false">UsernameKey2</string>
    <string name="pref_username_key_3" translatable="false">UsernameKey3</string>
    <string name="pref_username_key_4" translatable="false">UsernameKey4</string>

    <!--Strings for Categories-->
    <string name="category_general">Main</string>
    <string name="category_sports">Sports</string>
    <string name="category_clubs">Clubs</string>
    <string name="category_teachers">Teachers</string>
    <string name="category_staff">Staff</string>
    <string name="title_activity_My_News">My News</string>
    <string name="title_activity_help">Help</string>

    <!--Title Strings for the Help Activity-->
    <string name="help_title_home"><u>Home</u></string>
    <string name="help_title_my_news"><u>My News</u></string>
    <string name="help_title_usernames"><u>Usernames</u></string>
    <string name="help_title_note"><u>Note</u></string>

    <!--Description Strings for the Help Activity-->
    <string name="help_text">
        For additional help or application suggestions press the message icon to send an email
        to wakefieldnhs@gmail.com.
    </string>
    <string name="home_text">
        The \"Home\" page shows a compilation of Wakefield news from twitter sources organized
        via categories.
    </string>
    <string name="my_news_text">
        The \"My News\" page allows users to choose specific Wakefield news feeds they wish to
        follow.
        \n\nTo customize \"My News\", go to \"Settings\" -> \"My News\" then input a twitter
        username into one of the items labeled \"Twitter Username\".

        \n\nNot functioning? Try pressing \"Refresh\".
    </string>
    <string name="usernames_text">
        Click here for a list of Wakefield High School Usernames.
        \n\nA twitter username can be found by opening a specific twitter timeline then looking at
        the last words of the twitter website URL.
        \n\nExample: \"Wakefield Athletics\"
        \nWebsite (URL): https://twitter.com/WakeAthletics
        \nUsername: WakeAthletics
        \n\nMake sure you type in the correct username otherwise the application will not retrieve
        any news.
    </string>
    <string name="note_text">
        This app is produced by a Wakefield student and is available to you because I believe
        this tool improves the Wakefield Warrior Experience. This app was made with the
        intention to facilitate the spread of Wakefield\'s ongoings to community members.
    </string>

    <!--App Email Strings-->
    <string name="app_help_emailTo" translatable="false">wakefieldnhs@gmail.com</string>
    <string name="app_help_subject" translatable="false">Wakefield Application Help &amp; Feedback
    </string>
    <string name="app_email_message" translatable="false">Dear Wakefield Application,
    </string>

    <!-- Background settings strings-->
    <string name="pref_title_background_color">Background Color</string>
    <string name="pref_background_key" translatable="false">ColorKey</string>
    <string name="pref_background_default" translatable="false">0</string>
    <string-array name="background_color_strings">
        <item>White</item>
        <item>Black</item>
        <item>Grey</item>
        <item>Green</item>
        <item>Don\'t Go Picture</item>
    </string-array>
    <string-array name="background_color_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- User settings strings-->
    <string name="pref_title_user" translatable="false">Synergy</string>
    <string name="pref_user_key" translatable="false">UserKey</string>
    <string name="pref_user_default" translatable="false">0</string>
    <string-array name="user_strings">
        <item>Student</item>
        <item>Parent</item>
    </string-array>
    <string-array name="user_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- AppRater -->
    <string name="AppRater_showDialog_question">Enjoying Wakefield Application?</string>
    <string name="AppRater_showDialog_yes">Yes!</string>
    <string name="AppRater_showDialog_no">Not really</string>

    <string name="AppRater_rate_question">How about a rating on the App Store, then?</string>
    <string name="AppRater_hate_question">Would you mind giving us some feedback?</string>
    <string name="AppRater_rate_hate_yes">Ok, sure</string>
    <string name="AppRater_rate_hate_no">No, thanks</string>

    <string name="AppRater_preference_key" translatable="false">app_rater_key</string>
    <string name="AppRater_date_last_launch_key" translatable="false">date_last_launch_key</string>
    <string name="AppRater_launch_count_key" translatable="false">launch_count_key</string>
    <string name="AppRater_dont_show_again_key" translatable="false">dont_show_again_key</string>
</resources>
